# RDAPify

./: .dockerignore  .editorconfig  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .npmignore  .npmrc  .prettierignore  404.html  ADDITIONAL_IMPROVEMENTS.md  ADDITIONAL_RECOMMENDATIONS.md  ALL_DOCUMENTS.md  ARCHITECTURE.ar.md  ARCHITECTURE.md  BUILD_GUIDE.md  BUILD_SUCCESS_REPORT.md  CHANGELOG.ar.md  CHANGELOG.md  CHANGELOG.md   CHECKLIST.md  CHECK_PACKAGE_USAGE.md  CLAUDE.md  CLEANUP_COMPLETE.md  CLOUDFLARE_EMAIL_SETUP.md  CODECOV_FIX_SUMMARY.md  CODE_OF_CONDUCT.ar.md  CODE_OF_CONDUCT.md  COMPLETE_SUMMARY.md  CONTACT.md  CONTRIBUTING.ar.md  CONTRIBUTING.md  CRITICAL_ISSUES_AND_FIXES.md  CURRENT_STATUS.md  Cargo.toml  DEPLOYMENT_READY.txt  DEPLOY_FIX_SUMMARY.md  DEPRECATE_COMMANDS.txt  DEPRECATE_OLD_VERSIONS.md  DEVELOPMENT.md  (+102 more)
.github/: CLEANUP_PLAN.md  CODEOWNERS  COMMUNITY.md  FUNDING.yml  GOVERNANCE_DETAILED.md  ORGANIZATION.md  ORGANIZATION_SETUP.md  PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE_DOCS_FIX.md  RELEASE_PROCESS.md  REPOSITORY_CLEANUP_SUMMARY.md  SUPPORT.md  dependabot.yml  markdown-link-check-config.json  pull_request_template.md
.project/: README.md
ar/: 404.html  index.html  sitemap.xml  sw.js
benches/: batch.rs  bootstrap.rs  streaming.rs  validation.rs
benchmarks/: README.md
bindings/nodejs/: Cargo.toml  index.d.ts  index.js  package.json
bindings/nodejs/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
blog/: atom.xml  feed.json  index.html  rss.xml
crates/rdap-batch/: Cargo.toml
crates/rdap-batch/src/: lib.rs
crates/rdap-batch/tests/: batch_tests.rs
crates/rdap-batch/tests/common/: mod.rs
crates/rdap-bootstrap/: Cargo.toml
crates/rdap-bootstrap/src/: lib.rs
crates/rdap-cache/: Cargo.toml
crates/rdap-cache/src/: lib.rs
crates/rdap-cli/: Cargo.toml
crates/rdap-cli/src/: batch_cmd.rs  config.rs  error.rs  main.rs  output.rs
crates/rdap-client/: Cargo.toml
crates/rdap-client/src/: lib.rs
crates/rdap-config/: Cargo.toml
crates/rdap-config/src/: config.rs  env.rs  lib.rs  loader.rs  validate.rs
crates/rdap-core/: Cargo.toml
crates/rdap-core/src/: circuit_breaker.rs  error_class.rs  fetcher.rs  lib.rs  normalizer.rs
crates/rdap-core/src/validation/: error.rs  json.rs  limits.rs  mod.rs  rdap.rs
crates/rdap-core/tests/: observability.rs  tracing_redaction.rs
crates/rdap-logging/: Cargo.toml
crates/rdap-logging/src/: format.rs  init.rs  lib.rs
crates/rdap-metrics/: Cargo.toml
crates/rdap-metrics/src/: exporter.rs  hooks.rs  lib.rs  redact.rs  sampling.rs  types.rs
crates/rdap-metrics/tests/: labels.rs
crates/rdap-mysql/: Cargo.toml
crates/rdap-mysql/src/: lib.rs
crates/rdap-rate-limit/: Cargo.toml
crates/rdap-rate-limit/src/: lib.rs
crates/rdap-security/: Cargo.toml  SECURITY.md
crates/rdap-security/src/: content_type.rs  dns.rs  error.rs  http_policy.rs  ip.rs  lib.rs  limits.rs  redirect.rs  resolver.rs  url.rs
crates/rdap-service/: Cargo.toml
crates/rdap-service/src/: error.rs  lib.rs  main.rs  metrics.rs  router.rs  state.rs
crates/rdap-service/src/handlers/: batch.rs  health.rs  metrics_handler.rs  mod.rs  rdap.rs
crates/rdap-service/tests/: metrics_sanity.rs
crates/rdap-sqlite/: Cargo.toml
crates/rdap-sqlite/src/: lib.rs
crates/rdap-stream/: Cargo.toml
crates/rdap-stream/src/: lib.rs
crates/rdap-types/: Cargo.toml
crates/rdap-types/src/: asn.rs  availability.rs  common.rs  domain.rs  entity.rs  error.rs  ip.rs  lib.rs  nameserver.rs
crates/rdapify/: Cargo.toml
crates/rdapify-client/: Cargo.toml
crates/rdapify-client/src/: lib.rs
crates/rdapify-client/tests/: pipeline.rs
crates/rdapify/benches/: README.md  batch.rs  bootstrap.rs  query.rs  validation.rs
crates/rdapify/examples/: asn_lookup.rs  basic_lookup.rs  batch_lookup.rs  ip_lookup.rs  monitoring.rs  service_mode.rs  webhooks.rs
crates/rdapify/src/: lib.rs
crates/rdapify/tests/: chaos.rs  contract.rs  integration_tests.rs  live_tests.rs  performance.rs  property.proptest-regressions  property.rs  simulation.rs  snapshot.rs  soak.rs  streaming_tests.rs  stress.rs
crates/rdapify/tests/common/: mod.rs
crates/rdapify/tests/snapshots/: snapshot__asn_response.snap  snapshot__domain_response.snap  snapshot__domain_response_cached.snap  snapshot__ip_response.snap  snapshot__nameserver_response.snap  snapshot__status_order.snap
diagrams/: README.md  anomaly_detection.mmd  architecture_overview.mmd  cache_strategy.mmd  data_flow.mmd  discovery_flow.mmd  error_state_machine.mmd  normalization_pipeline.mmd
docs/: API_REFERENCE.ar.md  API_REFERENCE.md  ARCHITECTURE.md  CLI.md  COMPARISON.md  CONFIG.md  DOCKER.md  INSTALL.md  INTEGRATIONS_GUIDE.ar.md  INTEGRATIONS_GUIDE.md  ISOLATION_MODES.md  KNOWN_LIMITS.md  LICENSING_MODEL.md  MONITORING.md  OPEN_CORE.md  PERFORMANCE.md  PERFORMANCE_SPEC.md  PRODUCTION.md  README.md  RELEASE_CHECKLIST_0.6.0.md  REPOSITORY_BOUNDARIES.md  ROADMAP.md  RUST_API.md  SECURITY.md  SLO.md  index.html
es/: 404.html  index.html  sitemap.xml  sw.js
examples/: README.md  docker-compose.yml  rdapify.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: input_normalization.rs  rdap_parser.rs  validation.rs
loadtest/: .gitignore  README.md  run.sh
loadtest/harness/: Cargo.toml
loadtest/harness/src/: main.rs  outcome.rs  slo.rs  stats.rs
loadtest/harness/src/scenarios/: e1.rs  e2.rs  e3.rs  e4.rs  e5.rs  e6.rs  mod.rs
loadtest/mock-upstream/: Cargo.toml
loadtest/mock-upstream/src/: main.rs
ops/: README.md  incidents.md
playground/: .gitignore  DELIVERABLES.md  FINAL_STATUS.md  README.md  SETUP.md  TESTING_GUIDE.md  index.html  package.json  test-setup.sh
pricing/: index.html
privacy/: index.html
refund/: index.html
ru/: 404.html  index.html  sitemap.xml  sw.js
scripts/: README.md  apply-workflow-improvements.sh  benchmark.js  check-dependencies.js  generate-docs.js  memory-check.sh  restructure-enterprise.sh  size-check.sh  startup-benchmark.sh  test-coverage.js  update-templates.js  verify-api.js  (+2 more)
(+5436 files in other folders)
