[workspace]
members = [
    "crates/rdap-types",
    "crates/rdap-security",
    "crates/rdap-bootstrap",
    "crates/rdap-cache",
    "crates/rdap-core",
    "crates/rdap-stream",
    "crates/rdapify-client",
    "crates/rdap-rate-limit",
    "crates/rdap-batch",
    "crates/rdap-cli",
    "crates/rdapify",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/rdapify/RDAPify"
homepage = "https://rdapify.com"
authors = ["RDAPify Team <dev@rdapify.com>"]

[workspace.dependencies]
# Async runtime
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# HTTP (rustls = pure Rust TLS, no OpenSSL)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"], default-features = false }

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Types used across crates
url        = "2"
ipnetwork  = "0.20"
idna       = "1"
dashmap    = "6"
chrono     = { version = "0.4", features = ["serde"] }

# CLI (only in rdap-cli)
clap = { version = "4", features = ["derive", "color"] }

# Dev / test
tokio-test = "0.4"
mockito    = "1"
criterion  = { version = "0.5", features = ["html_reports", "async_tokio"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
