[workspace]
members = [
    # ── Core layer (always compiled) ──────────────────────────────────────────
    "crates/rdap-config",
    "crates/rdap-logging",
    "crates/rdap-types",
    "crates/rdap-security",
    "crates/rdap-bootstrap",
    "crates/rdap-core",
    "crates/rdapify-client",
    # ── Optional modules ──────────────────────────────────────────────────────
    "crates/rdap-cache",
    "crates/rdap-metrics",
    "crates/rdap-stream",
    "crates/rdap-rate-limit",
    "crates/rdap-batch",
    # ── CLI & Service runtimes (optional) ─────────────────────────────────────
    "crates/rdap-cli",
    "crates/rdap-service",
    # ── Storage backends (optional, skeleton) ─────────────────────────────────
    "crates/rdap-sqlite",
    "crates/rdap-postgres",
    "crates/rdap-mysql",
    # ── Public facade ─────────────────────────────────────────────────────────
    "crates/rdapify",
    # ── Language bindings ─────────────────────────────────────────────────────
    "bindings/nodejs",
]
# Stage E load-test infra lives under `loadtest/` as standalone projects so
# they don't slow down `cargo test --workspace` and can pin their own deps.
exclude = [
    "loadtest/mock-upstream",
    "loadtest/harness",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/rdapify/RDAPify"
homepage = "https://rdapify.com"
authors = ["RDAPify Team <dev@rdapify.com>"]

[workspace.dependencies]
# Async runtime
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "process", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# HTTP (rustls = pure Rust TLS, no OpenSSL)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli", "http2", "stream"], default-features = false }

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Types used across crates
url        = "2"
ipnetwork  = "0.20"
idna       = "1"
# Public Suffix List (embedded ~250 KB). Optional — pulled in only behind a
# crate feature flag so the default binary stays within the size budget.
addr       = "0.15"
dashmap    = "6"
chrono     = { version = "0.4", features = ["serde"] }

# Config file parsing
toml = "0.8"

# Structured logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "ansi", "time"] }
tracing-appender   = "0.2"
time               = { version = "0.3", features = ["formatting", "macros"] }

# Metrics (Stage D — Observability)
metrics                     = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false }
uuid                        = { version = "1", features = ["v7"] }

# CLI (only in rdap-cli)
clap = { version = "4", features = ["derive", "color"] }

# Dev / test
tokio-test = "0.4"
mockito    = "1"
bytes      = "1"

# Async utilities
futures = "0.3"

# Property-based testing
proptest = "1"

# Network simulation
wiremock = "0.6"

# Snapshot testing
insta = { version = "1", features = ["json", "redactions"] }

# Bounded cache (LRU + TTL)
moka = { version = "0.12", features = ["sync"] }

# Random number generation (jitter)
rand = "0.9"

# Dev / test
criterion  = { version = "0.5", features = ["html_reports", "async_tokio"] }

[profile.release]
opt-level = "z"         # Optimise for binary size
lto = true              # Link-time optimisation (cross-crate dead code elimination)
codegen-units = 1       # Single codegen unit for maximum LTO effectiveness
strip = true            # Strip debug symbols from the final binary
panic = "abort"         # Remove panic unwinding machinery (~10-20 KB savings)

[profile.dev]
opt-level = 0
debug = true
