[package]
name = "rdapify-node"
version = "0.7.0"
edition = "2021"
description = "Node.js binding for rdapify"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]
# napi symbols (napi_*) are resolved by the Node runtime at load time, so the
# Rust unit-test harness cannot link this crate (fails on macOS and under
# tarpaulin, which disables dead-code elimination). The binding is exercised via
# `napi build` + Node tests in CI, not `cargo test`.
test = false
doctest = false

[dependencies]
# Core library
rdapify = { path = "../../crates/rdapify", version = "0.7.0" }

# napi-rs: generates N-API bindings automatically
napi       = { version = "2", features = ["async", "napi6", "serde-json"] }
napi-derive = "2"

# Async runtime (matches tokio in rdapify)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Stream utilities for collecting ReceiverStream results
tokio-stream = { version = "0.1", features = ["sync"] }

# JSON serialization (for passing structs across the FFI boundary)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
