[workspace]

[package]
name = "rdapify-python"
version = "0.7.0"
edition = "2021"
description = "Python binding for rdapify"
license = "Apache-2.0"

[lib]
name = "rdapify_python"
crate-type = ["cdylib"]

[dependencies]
rdapify   = { path = "../../crates/rdapify" }
pyo3      = { version = "0.22", features = ["extension-module", "abi3-py38"] }
tokio        = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde_json   = "1"
serde        = { version = "1", features = ["derive"] }
