[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "rdapify-py"
version = "0.7.0"
description = "⚠️ DEPRECATED — RDAPify is now Rust-first. Future Python support via PyO3 after v1.0. See https://github.com/rdapify/RDAPify"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
keywords = ["rdap", "whois", "domain", "ip", "asn", "rust"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage       = "https://rdapify.com"
Repository     = "https://github.com/rdapify/RDAPify"
Documentation  = "https://docs.rdapify.com"

[tool.maturin]
module-name = "rdapify_py"
bindings = "pyo3"
# pure Rust extension — no Python source directory needed
features = []
