[package]
name = "rdap-batch"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Batch RDAP query execution with concurrency control"

[dependencies]
rdap-types      = { path = "../rdap-types", version = "0.1.0" }
rdap-client     = { path = "../rdap-client", version = "0.1.0" }
rdap-rate-limit = { path = "../rdap-rate-limit", version = "0.1.0" }
tokio           = { workspace = true }
