[package]
name = "rdap-batch"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-performance batch RDAP query engine with streaming and constant-memory execution"

[dependencies]
rdap-types      = { path = "../rdap-types",      version = "0.1.0" }
rdapify-client  = { path = "../rdapify-client",  version = "0.3.2" }
tokio           = { workspace = true }
tokio-stream    = { workspace = true }
futures         = "0.3"

[dev-dependencies]
mockito         = { workspace = true }
serde_json      = { workspace = true }
tokio           = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
rdap-security   = { path = "../rdap-security", version = "0.1.0" }
rdap-core       = { path = "../rdap-core",     version = "0.1.0" }
