[package]
name = "rdap-cache"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "In-memory response cache for RDAP clients"

[dependencies]
dashmap    = { workspace = true }
serde_json = { workspace = true }
