[package]
name = "rdap-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "RDAP command-line interface"

[[bin]]
name = "rdapify"
path = "src/main.rs"

[dependencies]
rdapify-client = { path = "../rdapify-client", version = "0.1.0" }
rdap-types  = { path = "../rdap-types", version = "0.1.0" }
tokio       = { workspace = true }
serde_json  = { workspace = true }
clap        = { workspace = true }
