[package]
name = "rdap-cli"
version = "0.6.11"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "RDAP command-line interface"

[[bin]]
name = "rdapify"
path = "src/main.rs"

[dependencies]
rdapify-client = { path = "../rdapify-client", version = "0.3.2" }
rdap-types     = { path = "../rdap-types",     version = "0.1.0" }
rdap-batch     = { path = "../rdap-batch",     version = "0.2.0" }
tokio          = { workspace = true }
tokio-stream   = { workspace = true }
serde_json     = { workspace = true }
serde          = { workspace = true }
toml           = { workspace = true }
clap           = { workspace = true }
clap_complete  = "4"
indicatif      = "0.17"
futures        = "0.3"
