[package]
name = "rdap-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-level RDAP client with bootstrap, caching, and SSRF protection"

[lib]
name = "rdap_client"
crate-type = ["rlib"]

[dependencies]
rdap-types    = { path = "../rdap-types" }
rdap-security = { path = "../rdap-security" }
rdap-bootstrap = { path = "../rdap-bootstrap" }
rdap-cache    = { path = "../rdap-cache" }
rdap-core     = { path = "../rdap-core" }
rdap-stream   = { path = "../rdap-stream" }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
serde_json   = { workspace = true }
idna         = { workspace = true }
