[package]
name = "rdap-config"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Configuration system for RDAPify (TOML + env overrides)"

[dependencies]
serde      = { workspace = true }
thiserror  = { workspace = true }
toml       = { workspace = true }

[dev-dependencies]
tempfile = "3"
