[package]
name = "rdap-rate-limit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rate limiting for RDAP queries (per-registry and global)"

[dependencies]
tokio = { workspace = true }
