[package]
name = "rdap-rate-limit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Production-grade rate limiting for RDAP queries (GCRA via governor)"

[dependencies]
# GCRA implementation — provides exact wait times, no approximation
governor  = { version = "0.6", features = ["std"] }

# Lock-free per-host state map (workspace version, avoids double dashmap)
dashmap   = { workspace = true }

# Async runtime for timer-based waiting
tokio     = { workspace = true, features = ["time"] }

# Error types
thiserror = { workspace = true }
