[package]
name = "rdap-security"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SSRF protection and URL validation for RDAP clients"

[dependencies]
rdap-types = { path = "../rdap-types", version = "0.1.0" }
url        = { workspace = true }
