[package]
name = "rdap-security"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SSRF protection, URL validation, DNS rebinding defense, and secure HTTP fetch for RDAP clients"

[dependencies]
rdap-types = { path = "../rdap-types", version = "0.7.0" }
url        = { workspace = true }
reqwest    = { workspace = true }
bytes      = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }
