[package]
name = "rdap-service"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTTP API service runtime for RDAPify (Axum-based)"

[[bin]]
name = "rdap-service"
path = "src/main.rs"

# ── Feature flags ─────────────────────────────────────────────────────────────
#
# `metrics` (off by default) — wires the canonical engine metrics surface
# from `rdap-metrics` into this service. When enabled:
#   1. `install_recorder()` is called at startup.
#   2. Engine hooks in `rdap-core` / `rdapify-client` emit `rdap_*` series.
#   3. `/metrics` appends the engine render to the local registry text.
# When off, `/metrics` exposes only the local prometheus-client registry.
[features]
default = []
metrics = [
    "dep:rdap-metrics",
    "rdap-metrics/enabled",
    "rdapify-client/metrics",
]

[dependencies]
# Internal crates
rdap-types      = { path = "../rdap-types", version = "0.7.0" }
rdap-config     = { path = "../rdap-config", version = "0.7.0" }
rdap-logging    = { path = "../rdap-logging", version = "0.7.0" }
rdap-batch      = { path = "../rdap-batch", version = "0.7.0" }
rdap-core       = { path = "../rdap-core", version = "0.7.0" }
rdapify-client  = { path = "../rdapify-client", version = "0.7.0" }
rdap-metrics    = { path = "../rdap-metrics", version = "0.7.0", optional = true }

# Shared workspace deps
tokio      = { workspace = true, features = ["signal"] }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }

# HTTP service
axum       = { version = "0.8", features = ["macros"] }
tower      = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-gzip", "timeout", "request-id"] }

# Async utilities
futures = "0.3"

# Metrics
prometheus-client = "0.22"
