[package]
name = "rdap-stream"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Async streaming types for batch RDAP queries"

[dependencies]
rdap-types   = { path = "../rdap-types" }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
