[package]
name = "rdapify-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-level RDAP client with bootstrap, caching, and SSRF protection"

[lib]
name = "rdapify_client"
crate-type = ["rlib"]

[dependencies]
rdap-types    = { path = "../rdap-types", version = "0.1.0" }
rdap-security = { path = "../rdap-security", version = "0.1.0" }
rdap-bootstrap = { path = "../rdap-bootstrap", version = "0.1.0" }
rdap-cache    = { path = "../rdap-cache", version = "0.1.0" }
rdap-core     = { path = "../rdap-core", version = "0.1.0" }
rdap-stream   = { path = "../rdap-stream", version = "0.1.0" }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
serde_json   = { workspace = true }
idna         = { workspace = true }
