[package]
name = "rdapify-client"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-level RDAP client with bootstrap, caching, and SSRF protection"

[lib]
name = "rdapify_client"
crate-type = ["rlib"]

# ── Feature flags ─────────────────────────────────────────────────────────────

[features]
# Default: both cache and streaming enabled
default = ["memory-cache", "stream"]

# In-memory response cache (DashMap-backed)
memory-cache = ["dep:rdap-cache"]

# Async streaming query API
stream = ["dep:rdap-stream", "dep:tokio-stream"]

# ── Dependencies ──────────────────────────────────────────────────────────────

[dependencies]
# Core (always required)
rdap-types     = { path = "../rdap-types",     version = "0.1.0" }
rdap-security  = { path = "../rdap-security",  version = "0.1.0" }
rdap-bootstrap = { path = "../rdap-bootstrap", version = "0.1.0" }
rdap-core      = { path = "../rdap-core",      version = "0.1.0" }
tokio          = { workspace = true }
serde_json     = { workspace = true }
idna           = { workspace = true }

# Optional modules
rdap-cache   = { path = "../rdap-cache",  version = "0.1.0", optional = true }
rdap-stream  = { path = "../rdap-stream", version = "0.1.0", optional = true }
tokio-stream = { workspace = true, optional = true }
