[package]
name = "rdapify"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Unified, secure, high-performance RDAP client with built-in SSRF protection and privacy controls"
keywords = ["rdap", "whois", "domain", "network", "dns"]
categories = ["network-programming", "web-programming::http-client"]
readme = "../../README.md"
documentation = "https://docs.rs/rdapify"

[lib]
name = "rdapify"
crate-type = ["rlib"]

[dependencies]
rdap-types      = { path = "../rdap-types", version = "0.1.0" }
rdap-security   = { path = "../rdap-security", version = "0.1.0" }
rdap-bootstrap  = { path = "../rdap-bootstrap", version = "0.1.0" }
rdap-cache      = { path = "../rdap-cache", version = "0.1.0" }
rdap-core       = { path = "../rdap-core", version = "0.1.0" }
rdapify-client  = { path = "../rdapify-client", version = "0.1.0" }
rdap-stream     = { path = "../rdap-stream", version = "0.1.0" }
rdap-batch      = { path = "../rdap-batch", version = "0.1.0" }
rdap-rate-limit = { path = "../rdap-rate-limit", version = "0.1.0" }

[dev-dependencies]
tokio      = { workspace = true }
tokio-test = { workspace = true }
tokio-stream = { workspace = true }
mockito    = { workspace = true }
serde_json = { workspace = true }
criterion  = { workspace = true }

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "ssrf"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "streaming"
harness = false
